[package]
name = "embedded-png"
version = "0.1.0"
edition = "2024"

[dependencies]
#embedded-graphics-core = { path = "../embedded-graphics/core" }
embedded-graphics-core = "^0.4"
miniz_oxide = { version = "^0.8", default-features = false }
crc32fast = { version = "^1.5", default-features = false }
num_enum = { version = "^0.7", default-features = false }

[dev-dependencies]
png-decoder = "^0.1"
